--- a/tomas/project2tour/10md_xylotheque.html
+++ b/tomas/project2tour/10md_xylotheque.html
@@ -55,7 +55,7 @@
   </div>
   
   <div class="pagination">
-				<a href="in-the-studio.html">Drawings</a>
+				<a href="11md_academy.html">Academy of Things</a>
 			</div>
   
 
