--- a/tomas/project2tour/12md_kassel.html
+++ b/tomas/project2tour/12md_kassel.html
@@ -37,7 +37,7 @@
   </div>
   
   <div class="pagination">
-        <a href="in-the-studio.html">Drawings</a>
+        <a href="8md_dinosaurs.html">Dinosaurs</a>
       </div>
 
   
