--- a/tomas/project2tour/2md_home.html
+++ b/tomas/project2tour/2md_home.html
@@ -78,10 +78,8 @@
 
 
 
-<!--
 
-
-		<a href="https://google.com">
+		<a href="https://bing.com">
 			<div class="button" id="bunny">
 				<img class="image" src="buttons/0bunny.jpg">
 			</div>
@@ -162,13 +160,13 @@
 			</div>
 		</a>
 
-		<a href="https://google.com">
+		<a href="https://duckduckgo.com">
 			<div class="button" id="nine">
 				<img class="image" src="buttons/9.jpg">
 			</div>
 		</a>
 
-		<a href="https://google.com">
+		<a href="https://bing.com">
 			<div class="button" id="onezero">
 				<img class="image" src="buttons/10.jpg">
 			</div>
@@ -216,7 +214,7 @@
 			</div>
 		</a>
 
-		<a href="https://google.com">
+		<a href="https://duckduckgo.com">
 			<div class="button" id="oneeight">
 				<img class="image" src="buttons/18.jpg">
 			</div>
@@ -296,7 +294,7 @@
 			</div>
 		</a>
 
-		<a href="https://google.com">
+		<a href="https://duckduckgo.com">
 			<div class="button" id="threethree">
 				<img class="image" src="buttons/33.jpg">
 			</div>
@@ -363,7 +361,7 @@
 			</div>
 		</a>
 
-		<a href="https://google.com">
+		<a href="https://bing.com">
 			<div class="button" id="foursix">
 				<img class="image" src="buttons/46.jpg">
 			</div>
@@ -375,7 +373,7 @@
 			</div>
 		</a>
 
-		<a href="https://google.com">
+		<a href="https://duckduckgo.com">
 			<div class="button" id="foureight">
 				<img class="image" src="buttons/48.jpg">
 			</div>
@@ -393,7 +391,7 @@
 			</div>
 		</a>
 
-		<a href="https://google.com">
+		<a href="links/47trash2.html">
 			<div class="button" id="fiveone">
 				<img class="image" src="buttons/51.jpg">
 			</div>
@@ -401,7 +399,7 @@
 
 
 
-		<a href="links/39species.links/47trash2.html">
+		<a href="links/39species.html">
 			<div class="button" id="fivethree">
 				<img class="image" src="buttons/53.jpg">
 			</div>
@@ -431,7 +429,7 @@
 			</div>
 		</a>
 
-		<a href="links.41isis.html">
+		<a href="links/41isis.html">
 			<div class="button" id="fiveeight">
 				<img class="image" src="buttons/58.jpg">
 			</div>
@@ -458,8 +456,6 @@
 		</a>
 
 		
--->
-
 
 	<img id="bg" src="http://i61.tinypic.com/21wh3t.jpg">
 
