--- a/tomas/project2tour/4md_neukom.html
+++ b/tomas/project2tour/4md_neukom.html
@@ -53,7 +53,7 @@
   </div>
   
   <div class="pagination">
-				<a href="in-the-studio.html">Drawings</a>
+				<a href="5md_cabinet.html">Cabinet of Curiosities</a>
 			</div>
   
 
