--- a/tomas/project2tour/7md_tate.html
+++ b/tomas/project2tour/7md_tate.html
@@ -69,7 +69,7 @@
   </div>
   
   <div class="pagination">
-        <a href="in-the-studio.html">Drawings</a>
+        <a href="12md_kassel.html">..</a>
       </div>
   
 
