--- a/tomas/project2tour/9md_macabre.html
+++ b/tomas/project2tour/9md_macabre.html
@@ -53,7 +53,7 @@
   </div>
   
   <div class="pagination">
-				<a href="in-the-studio.html">Drawings</a>
+				<a href="10md_xylotheque.html">Xylotheque</a>
 			</div>
   
 
