--- a/tomas/project2tour/11md_academy.html
+++ b/tomas/project2tour/11md_academy.html
@@ -54,7 +54,7 @@
   </div>
   
   <div class="pagination">
-        <a href="in-the-studio.html">Drawings</a>
+        <a href="13md_compress.html">Dion</a>
       </div>
   
 
