--- a/tomas/project2tour/5md_cabinet.html
+++ b/tomas/project2tour/5md_cabinet.html
@@ -53,7 +53,7 @@
   </div>
   
   <div class="pagination">
-				<a href="in-the-studio.html">Drawings</a>
+				<a href="6md_collectors.html">Tropical Collectors</a>
 			</div>
   
 
