--- a/tomas/project2tour/6md_collectors.html
+++ b/tomas/project2tour/6md_collectors.html
@@ -64,7 +64,7 @@
   </div>
   
   <div class="pagination">
-				<a href="in-the-studio.html">Drawings</a>
+				<a href="7md_Tate.html">The River Dig</a>
 			</div>
   
 
