--- a/tomas/project2tour/8md_dinosaurs.html
+++ b/tomas/project2tour/8md_dinosaurs.html
@@ -53,7 +53,7 @@
   </div>
   
   <div class="pagination">
-				<a href="in-the-studio.html">Drawings</a>
+        <a href="9md_macabre.html">The Macabre Treasury</a>
 			</div>
   
 
