--- a/sam/index.html
+++ b/sam/index.html
@@ -17,7 +17,7 @@
       <li><a href="exercise4/">Exercise 4</a></li>
       <li><a href="">Exercise 5</a></li>
       <li><a href="assignment1/index.html">Assignment 1</a></li>
-
+  <li><a href="assignment2/index.html">Assignment 1</a></li>
 
       
 
