--- a/ji/index.html
+++ b/ji/index.html
@@ -12,6 +12,7 @@
     <body>
         <div><h1>Ji's Assignment Homepage webdesign</h1></div>
         <p><a href="1/index.html" target="_blank">Assignment 1</a></p>
+        <p><a href="2/main.html" target="_blank">Assignment 2</a></p>
     </body>
     
 </html>
