--- a/yuexin/index.html
+++ b/yuexin/index.html
@@ -21,8 +21,7 @@
 
     <li><a href="project_2_artist_tour/main.html"><p id="interview"; style="text-align:center; font-size:40px">Click me to get to the Artist Tour!</p></a></li>
 
-    <li><a href="Exercises 1 Carl Dair Markup/File/html.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the Carl Dair Markup!</p></a></li>
-
+    <li><a href="Exercises 1 Carl Dair Markup/File/html.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the exercises!</p></a></li>
     </body>
 
 </html>
