--- a/ojus/index.html
+++ b/ojus/index.html
@@ -6,6 +6,19 @@
         <title>Ojus Assignment Homepage Webdesign</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
+        <style>
+            body {
+                font-family: "georgia", serif;
+                font-size: 200px;
+            }
+
+            /* iPads (portrait and landscape) ----------- */
+            @media screen and (max-width: 1024px) {
+                body {
+                    font-size: 20px;
+                }
+            }
+        </style>
     </head>
 
     <body>
