--- a/greg/index.html
+++ b/greg/index.html
@@ -25,7 +25,7 @@
         <h3>Projects</h3>
         <ol>
             <li><a href="project01/interview.html">Style an Interview</a></li>
-            <li><a href="">Hyperlinked Artist Tour</a></li>
+            <li><a href="project2/project2.html">Hyperlinked Artist Tour</a></li>
         </ol>
 
     </body>
