--- a/ruth/index.html
+++ b/ruth/index.html
@@ -10,5 +10,6 @@
 <body>
 	<p><a href="exercise1/exercise1-copy.html">Exercise 1: Carl Dair Markup</a></p>
 	<p><a href="project1/interview.html">Project 1: Jacob Hashimoto Interview</a></p>
+	<p><a href="project2/tiborkalman3.html">Project 2: Tibor Kalman</a></p>
 </body>
 </html>
