--- a/jingru/index.html
+++ b/jingru/index.html
@@ -6,13 +6,32 @@
         <title>Jingru Assignment Homepage Webdesign</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
+        <link type="text/css" rel="stylesheet" href="index.css">
     </head>
 
     <body>
-        <ol>
-            <!--<li><a href="ex1/index.html">Exercise 1: Carl Dair Markup</li>-->
-            <li><a href="http://risdweb15-02.github.io/webdesign/jingru/project1_interview/interview.html">Project 1: Interview</a></li>
-        </ol>
+        <div class="main">
+        <div class="content">
+        <ul>
+        <li>Exercises</li>
+            <ul>
+                <li><a href="exercises/01">01: Path Navigation</a></li>
+                <li><a href="exercises/02-03/html.html">02+03: Carl Dair’s Seven Principles of Typographic Contrast</a></li>
+                <li><a href="exercises/04/artcenter.jpg">04: Reverse Engineer a Sitemap</a></li>
+                <li><a href="exercises/05">05: Floating</a></li>
+            </ul>
+
+
+        <ul>Projects</ul>
+            <ul>
+                <li><a href="http://risdweb15-02.github.io/webdesign/jingru/project1_interview/interview.html">01: Style an Interview</a></li>
+                <li><a href="">02: Hyperlinked Artist Tour</a></li>
+        </ul>
+        </div>
+        </div>
+    </body>
+    
+</html>
 
     </body>
 
