--- a/yuxin/index.html
+++ b/yuxin/index.html
@@ -16,6 +16,7 @@
 
         <li><a href="seven-principles.html"><p class="move">Carl Dair Mark up</P></a></li>
         <li><a href="webinterview/interview.html"><p class="move">Interview Project</p></a></li>
+         <li><a href="artist/open/open.html"><p class="move">Interview Project</p></a></li>
 
         </ol>
         
