--- a/yuxin/artist/patch1/patch1.html
+++ b/yuxin/artist/patch1/patch1.html
@@ -30,7 +30,7 @@
                 <img src="folder2.png"> 
             </div>
  
-            <div class="file-name"><p><span class="name"><a href="../n5117c/n5117c.html">Next File</a></span></P></div>
+            <div class="file-name"><p><span class="name"><a href="../symbology/symbology.html">Back to top</a></span></P></div>
             
         </div>
 
