--- a/yuxin/artist/adf-sw/adf-sw.html
+++ b/yuxin/artist/adf-sw/adf-sw.html
@@ -31,7 +31,7 @@
                 <img src="folder2.png"> 
             </div>
  
-            <div class="file-name"><p><a href="../groom-lake2/groomlake.html"><span class="name">Next File: back to top</a></span></P></div>
+            <div class="file-name"><p><a href="../groom-lake2/groomlake.html"><span class="name">Back to Top</a></span></P></div>
             
         </div>
 
