--- a/gyu-won/index.html
+++ b/gyu-won/index.html
@@ -25,7 +25,7 @@
         <h3>Projects</h3>
         <ol>
             <li><a href="project01/interview.html">Style an Interview</a></li>
-            <li><a href="">Hyperlinked Artist Tour</a></li>
+            <li><a href="project02/page01.html">Hyperlinked Artist Tour</a></li>
         </ol>
 
     </body>
