--- a/chelsea/project2artisttour/html/18.html
+++ b/chelsea/project2artisttour/html/18.html
@@ -16,7 +16,7 @@
             2003
             </p>
            <p id="p1a">
-            It might look spontaneous or “hand-made”, but the way it is produced can be very complex, very highly crafted. Maybe it is about life, not pretending to do the impossible, allowing the mistakes to show.<br><br>However, we’re however not sure this is an <a hre="19.html">issue</a>.
+            It might look spontaneous or “hand-made”, but the way it is produced can be very complex, very highly crafted. Maybe it is about life, not pretending to do the impossible, allowing the mistakes to show.<br><br>However, we’re however not sure this is an <a href="19.html">issue</a>.
             </p>
             <p id="rightnumber">27</p>
     </body>  
