--- a/tomas/project2tour/1md_landingpage.html
+++ b/tomas/project2tour/1md_landingpage.html
@@ -14,9 +14,9 @@
   
     <div id="bg">
       <img src="http://i57.tinypic.com/2vuzjaf.png">
-      <a id="enter" href="2md_home.html">
+      <a id="enter" href="2md_home.html"></a>
       <img id="md" src="http://i58.tinypic.com/25g770w.png">
-      </a>
+      
     </div>
     
     <div id="wk"><span class="b">W</span><span class="r">U</span><span class="y">N</span><span class="b">D</span><span class="g">E</span><span class="r">R</span><span class="y">K</span><span class="b">A</span><span class="g">M</span><span class="r">M</span><span class="y">E</span><span class="b">R</span></div>
