Correction to Web Designer page
Links weren’t working properly

--- a/jose/00DesignerProject/00DesignerProject/2-Machines/machines.html
+++ b/jose/00DesignerProject/00DesignerProject/2-Machines/machines.html
@@ -58,7 +58,7 @@
 
   			<div id="computer">
 
-  				<p class="name">Software Based Sructures</p>
+  				<p class="name">Software Based Structures</p>
 
   				</div>
 
