--- a/yuxin/artist/limit/limit.html
+++ b/yuxin/artist/limit/limit.html
@@ -35,7 +35,7 @@
                 <img src="folder2.png"> 
             </div>
  
-            <div class="file-name"> <p> <span class="name"> <a href="../symbology/symbology.html">Next Project</a></span></P></div>
+            <div class="file-name"> <p> <span class="name"> <a href="../the-black-site/blacksite.html">Next Project</a></span></P></div>
             
         </div>
 
