--- a/chelsea/project2artisttour/html/9.html
+++ b/chelsea/project2artisttour/html/9.html
@@ -23,12 +23,12 @@
     <body>
        <p id="p3">
             “One of the reasons we work so well together is that we don’t sit down with bullet points and put down a master plan.<br><br>It’s like the total opposite.” 
-            <img id="flip" src="../images/flip.jpg">
+            <a href="10.html"><img id="flip" src="../images/flip.jpg"></a>
             <br><br>
             <span id="speaker4">Bjork, Musician
             </span>
         </p>
-        <p id="next"><a href="10.html">Next Page</a></p>
+<!--        <p id="next"><a href="10.html">Next Page</a></p>-->
     </body>
     
 </html>
