--- a/mimi/projects/artist-tour/departures1.html
+++ b/mimi/projects/artist-tour/departures1.html
@@ -43,7 +43,7 @@
                         </div>
                         
                         <div class="thumbnails">
-                            <a href="navigationchart1.html" target="_blank"><div style="background: url(media/navigationchart1.jpg); background-size:cover;" class="thumb"></div></a>
+                            <a href="navigationchart1.html"><div style="background: url(media/navigationchart1.jpg); background-size:cover;" class="thumb"></div></a>
                         </div>
 
                      </div>
