--- a/mimi/projects/artist-tour/massagedsculptures3.html
+++ b/mimi/projects/artist-tour/massagedsculptures3.html
@@ -55,7 +55,7 @@
                 <div class="text">
                     <p>The massages sculptures are designed on the anthropomorphism principle. In "Vivre ensemble", Roland Barthes evokes the idea that human civilization image is embodied in the geometric form of the rectangle. The artist made some rectangular earth blocs massaging by some practitioner of  faciatherapy, shiatsu or plantar reflexology. Each peace is named as the therapist and corresponds to some symptoms  given by the artist as starting point. </p>
                     
-                    <p>The work matches up modeling and pain therapy, and evokes « <a href="departures1.html" target="_blank">a fold of tracks and of the erasure of tracks</a> ». While putting on the sculpture-object some traditional massage technics, the work reminds the artist role in shamanism tradition who, failing that it cures, could at least move the pain away. </p>
+                    <p>The work matches up modeling and pain therapy, and evokes « <a href="departures1.html">a fold of tracks and of the erasure of tracks</a> ». While putting on the sculpture-object some traditional massage technics, the work reminds the artist role in shamanism tradition who, failing that it cures, could at least move the pain away. </p>
                 </div>
             </div>
 
