--- a/mimi/projects/artist-tour/sphinx3.html
+++ b/mimi/projects/artist-tour/sphinx3.html
@@ -55,7 +55,7 @@
                 <div class="text">
                     <p>This set of drawings is the result of an experiment: what becomes of a form when it is repeated by hand to the point of exhaustion? The same figure of the Sphinx is drawn again and again by the artist onto dozens of sheets of paper until the gestures become mechanical and the motif gradually schematizes itself like an abstract pattern. This work questions the border between the narrative and the decorative; it deals with permanency and the deterioration at work when repetition and over-exposure cause meaning to vanish behind ornament.</p>
 
-                    <p>In the famous legend of Œdipus and the Sphinx, the amalgamated creature incarnates the answer to the mystery of human destiny. This work acts as a grand mural about fate, facing the sphinx with the paradox of the fate of myths: <a href="massagedsculptures1.html" target="_blank">what still survives</a> though copying, translation, interpretation and misunderstanding?</p>
+                    <p>In the famous legend of Œdipus and the Sphinx, the amalgamated creature incarnates the answer to the mystery of human destiny. This work acts as a grand mural about fate, facing the sphinx with the paradox of the fate of myths: <a href="massagedsculptures1.html">what still survives</a> though copying, translation, interpretation and misunderstanding?</p>
                 </div>
             </div>
 
