--- a/jingru/eames website/storage_esu426.html
+++ b/jingru/eames website/storage_esu426.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>ESU 226-N by Charles and Ray Eames</title>
+		<title>ESU 426-C by Charles and Ray Eames</title>
 		<link type="text/css" rel="stylesheet" href="css/desk.css">
 		<link href='http://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:700' rel='stylesheet' type='text/css'>
@@ -19,11 +19,11 @@
 			<div class="main">
 				<div class="title">
 
-					<p class="titletxt"><span>desk&storage</span>   ESU 226-N</p>
+					<p class="titletxt"><span>desk&storage</span>   ESU 426-C</p>
 				</div>
 				<div class="imgbox"> 
 						<div class="img">
-							<img src="img/desk/esu226all.jpg">
+							<img src="img/desk/esu426all.jpg">
 
 						</div>
 				</div>
@@ -33,17 +33,16 @@
 					<p>
 						<strong>1953</strong></br></br>
 						Herman Miller</br></br>
-						H 33"</br></br>
+						60" H x 37" W x 16" D</br></br>
 
-						W 47"</br></br>
+						"This unit 60" high has eleven birch drawers and one shelf with sliding doors.  It is an ideal room divider with plentiful storage."  From a 1953 brochure created by the Eames Office for "This new edition of the Eames storage units which has been improved and refined so as to give greater service and pleasure to the customer."</br></br>
 
-						D 16"</br></br>
+						Yellow, white, red, blue, black and tan panels.</br></br>
 
-						"A handsome and serviceable chest of drawers, eleven in all-- seven medium and four deep.  All of these have metal to metal runners." Herman Miller "Storage Units" catalog dated 1953</br></br>
+						Available with white plyon [THIS EXAMPLE] or dimpled birch sliding doors.</br></br>
 
-						Tan, white, grey and black panels.</br></br>
-
-						Birch top</br></br>
+						Provenance:  Sal and Gladys Valastro
+</br></br>
 
 						J.F. Chen Collection</br></br>
 
@@ -60,9 +59,9 @@
 					<li></br></li>
 					<li><a href="storage_esu110.html">ESU 110-N</a></li>
 					<li><a href="storage_esu170.html">ESU 170-C</a></li>
-					<li><span>ESU 226-N</span></li>
-					<li><a href="storage_esu420.html">ESU 420-C </a></li>
-					<li><a href="storage_esu426.html">ESU 426-C</a></li>
+					<li><a href="storage_esu226.html">ESU 226-N </a></li>
+					<li><a href="storage_esu420.html">ESU 420-C</a></li>
+					<li><span>ESU 426-C</span></li>
 					<li><a href="storage_esud10n.html">ESU D-10-N Desk</a></li>
 					<li><a href="storage_esud20c.html">ESU D-20-C Desk </a></li>
 					<li><a href="storage_organic.html">Organic Design Case Goods</a></li>
