--- a/jingru/eames website/storage_esud20c.html
+++ b/jingru/eames website/storage_esud20c.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>ESU 226-N by Charles and Ray Eames</title>
+		<title>ESU D-20-C Desk by Charles and Ray Eames</title>
 		<link type="text/css" rel="stylesheet" href="css/desk.css">
 		<link href='http://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:700' rel='stylesheet' type='text/css'>
@@ -19,11 +19,11 @@
 			<div class="main">
 				<div class="title">
 
-					<p class="titletxt"><span>desk&storage</span>   ESU 226-N</p>
+					<p class="titletxt"><span>desk&storage</span>   ESU D-20-C Desk</p>
 				</div>
 				<div class="imgbox"> 
 						<div class="img">
-							<img src="img/desk/esu226all.jpg">
+							<img src="img/desk/esud20call.jpg">
 
 						</div>
 				</div>
@@ -31,19 +31,13 @@
 
 				<div class="biotxt">
 					<p>
-						<strong>1953</strong></br></br>
+						<strong>1951</strong></br></br>
 						Herman Miller</br></br>
-						H 33"</br></br>
+						Top dimension is 60" by 24 1/2"</br></br>
 
-						W 47"</br></br>
+						H 29"</br></br>
 
-						D 16"</br></br>
-
-						"A handsome and serviceable chest of drawers, eleven in all-- seven medium and four deep.  All of these have metal to metal runners." Herman Miller "Storage Units" catalog dated 1953</br></br>
-
-						Tan, white, grey and black panels.</br></br>
-
-						Birch top</br></br>
+						"Additional uses for the E.S.U. desks as table for sewing or receptionist desk are suggested."  Herman Miller ESU catalog, 1951</br></br>
 
 						J.F. Chen Collection</br></br>
 
@@ -60,12 +54,13 @@
 					<li></br></li>
 					<li><a href="storage_esu110.html">ESU 110-N</a></li>
 					<li><a href="storage_esu170.html">ESU 170-C</a></li>
-					<li><span>ESU 226-N</span></li>
-					<li><a href="storage_esu420.html">ESU 420-C </a></li>
+					<li><a href="storage_esu226.html">ESU 226-N </a></li>
+					<li><a href="storage_esu420.html">ESU 420-C</a></li>
 					<li><a href="storage_esu426.html">ESU 426-C</a></li>
 					<li><a href="storage_esud10n.html">ESU D-10-N Desk</a></li>
-					<li><a href="storage_esud20c.html">ESU D-20-C Desk </a></li>
-					<li><a href="storage_organic.html">Organic Design Case Goods</a></li>
+					<li><span>ESU D-20-C Desk</span></li>
+					<li><a href="storage_organic.html">Organic Design Case Goods </a></li>
+					
 				</ul>
 				
 			</div>
