--- a/srecht/index.html
+++ b/srecht/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="indexmain.css">
 
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    
  </head>
     <body> 
     <h1> Projects </h1>
