--- a/eunsu/index.html
+++ b/eunsu/index.html
@@ -18,6 +18,8 @@
         		<li id="first"> <a href="Gareth_bale.html"class="arrow">Project1: Gareth_Bale</a></li>
         		
                 <li ><a href="Project2/artist_tour.html"class="arrow">Project2: Taryn Simon
+                <li ><a href="Project3/sharedvoice.html"class="arrow">Project3: Shared Voice
+
     	   </ol>
             </div>
         </div>    
