--- a/eunsu/Project3/sharedvoice.html
+++ b/eunsu/Project3/sharedvoice.html
@@ -133,7 +133,7 @@
 		background-size: 100% 100%;
 	}
 	#slide11{
-		background-image: url(images/zahawork1.jpg);
+		background-image: url(images/zahawork1.JPG);
 		background-size: 100% 100%;
 	}	
 	#slide12{
