--- a/yuexin/index.html
+++ b/yuexin/index.html
@@ -11,6 +11,7 @@
         <meta name="description" content="">
 
         <meta name="viewport" content="width=device-width">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script><script src="js/sript.js"></script>
     </head>
 
     <body>
@@ -22,6 +23,8 @@
     <li><a href="project_2_artist_tour/main.html"><p id="interview"; style="text-align:center; font-size:40px">Click me to get to the Artist Tour!</p></a></li>
 
     <li><a href="Exercises 1 Carl Dair Markup/File/html.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the exercises!</p></a></li>
+
+
     </body>
 
 </html>
