--- a/gyu-won/index.html
+++ b/gyu-won/index.html
@@ -6,7 +6,9 @@
         <title>Gyu Won</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link type="text/css" rel="stylesheet" href="main.css"/>
+        <link type="text/css" rel="stylesheet" href="css/main.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="js/script.js"></script>
     </head>
     
 
