--- a/jose/index.html
+++ b/jose/index.html
@@ -8,7 +8,8 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="index.css">
-		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script src="js/script"></script>
 
 
 	</head>
