--- a/greg/index.html
+++ b/greg/index.html
@@ -6,7 +6,9 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link type="text/css" rel="stylesheet" href="main.css"/>
+        <link type="text/css" rel="stylesheet" href="css/main.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="js/script.js"></script>
     </head>
     
 
@@ -14,18 +16,19 @@
 
         <h3>Exercises</h3>
         <ol>
-            <li><a href="exercises/01">Path Navigation</a></li>
-            <li><a href="exercises/02-03/html.html">Carl Dair’s Seven Principles of Typographic Contrast</a></li>
+            <li><a href="">Path Navigation</a></li>
+            <li><a href="">Carl Dair’s Seven Principles of Typographic Contrast</a></li>
             <li><a href="">Exercise 2 continued</a></li>
-            <li><a href="exercises/04/artcenter.jpg">Reverse Engineer a Sitemap</a></li>
-            <li><a href="exercises/05">Floating</a></li>
+            <li><a href="">Reverse Engineer a Sitemap</a></li>
+            <li><a href="">Floating</a></li>
         </ol>
 
 
         <h3>Projects</h3>
         <ol>
             <li><a href="project01/interview.html">Style an Interview</a></li>
-            <li><a href="project2/project2.html">Hyperlinked Artist Tour</a></li>
+            <li><a href="project/project2/project2.html">Hyperlinked Artist Tour</a></li>
+            <li><a href="project/project3/project3.html">Shared Voices</a></li>
         </ol>
 
     </body>
