--- a/greg/index.html
+++ b/greg/index.html
@@ -14,18 +14,23 @@
 
     <body>
 
-        <h3>Exercises</h3>
-        <ol>
+        <h1 id="title">Greg's Assignment Home</h1>
+
+        <h3 class="sub_title">Exercises</h3>
+        <ol class="list">
             <li><a href="">Path Navigation</a></li>
-            <li><a href="">Carl Dair’s Seven Principles of Typographic Contrast</a></li>
-            <li><a href="">Exercise 2 continued</a></li>
-            <li><a href="">Reverse Engineer a Sitemap</a></li>
-            <li><a href="">Floating</a></li>
+            <li><a href="exercises/ex2/exercise2.html">Carl Dair Markup</a></li>
+            <li><a href="exercises/ex3/exercise3.html">Carl Dair Style</a></li>
+            <li><a href="exercises/ex4/exercise4.html">Reverse Engineer a Sitemap</a></li>
+            <li><a href="exercises/ex5/exercise5.html">Floating</a></li>
+            <li><a href="">Positioning</a></li>
+            <li><a href="">Artist bio</a></li>
+
         </ol>
 
 
-        <h3>Projects</h3>
-        <ol>
+        <h3 class="sub_title">Projects</h3>
+        <ol class="list">
             <li><a href="project01/interview.html">Style an Interview</a></li>
             <li><a href="project/project2/project2.html">Hyperlinked Artist Tour</a></li>
             <li><a href="project/project3/project3.html">Shared Voices</a></li>
