--- a/eunsu/index.html
+++ b/eunsu/index.html
@@ -15,11 +15,11 @@
     	<div class="header"><h1>Eunsu Chang's Website</h1>
             <div class="bodyT">
             <ol>
-        		<li id="first"> <a href="Project1/Gareth_bale.html"class="arrow">Project1: Gareth_Bale</a></li>
+        		<li id="first"> <a href="Projects/Project1/Gareth_bale.html"class="arrow">Project1: Gareth_Bale</a></li>
         		
-                <li ><a href="Project2/artist_tour.html"class="arrow">Project2: Taryn Simon
+                <li ><a href="Projects/Project2/artist_tour.html"class="arrow">Project2: Taryn Simon
                 
-                <li ><a href="Project3/sharedvoice.html"class="arrow">Project3: Shared Voice
+                <li ><a href="Projects/Project3/sharedvoice.html"class="arrow">Project3: Shared Voice
 
     	   </ol>
             </div>
