--- a/greg/index.html
+++ b/greg/index.html
@@ -23,7 +23,7 @@
             <li><a href="exercises/ex3/exercise3.html">Carl Dair Style</a></li>
             <li><a href="exercises/ex4/exercise4.html">Reverse Engineer a Sitemap</a></li>
             <li><a href="exercises/ex5/exercise5.html">Floating</a></li>
-            <li><a href="">Positioning</a></li>
+            <li><a href="exercises/ex6/exercise6.html">Positioning</a></li>
             <li><a href="">Artist bio</a></li>
 
         </ol>
