--- a/greg/exercises/ex6/exercise6.html
+++ b/greg/exercises/ex6/exercise6.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Floating</title>
+        <title>Positioning</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <!-- <link rel="stylesheet" href="css/main.css"> -->
@@ -11,13 +11,11 @@
 
     </head>
 
-        <h3 class="sub_title">Floating</h3>
+        <h3 class="sub_title">Positioning</h3>
         <ol class="list">
-            <li><a href="chess.html">Chessboard</a></li>
-            <li><a href="tenniscourt.html">Tennis Court</a></li>
-            <li><a href="3columngrid.html">3 Column Grid</a></li>
-            <li><a href="bloglayout.html">Blog Layout</a></li>
-            <li><a href="californiacase.html">California Case</a></li>
+            <li><a href="">Absolute Positioning</a></li>
+            <li><a href="">Fixed Positioning</a></li>
+            <li><a href="">Floats and Relative Positioning</a></li>
         </ol>
 
 
