--- a/greg/index.html
+++ b/greg/index.html
@@ -24,15 +24,15 @@
             <li><a href="exercises/ex4/exercise4.html">Reverse Engineer a Sitemap</a></li>
             <li><a href="exercises/ex5/exercise5.html">Floating</a></li>
             <li><a href="exercises/ex6/exercise6.html">Positioning</a></li>
-            <li><a href="">Artist bio</a></li>
+            <li><a href="exercises/ex7/exercise7.html">Artist bio</a></li>
 
         </ol>
 
 
         <h3 class="sub_title">Projects</h3>
         <ol class="list">
-            <li><a href="project01/interview.html">Style an Interview</a></li>
-            <li><a href="project/project2/project2.html">Hyperlinked Artist Tour</a></li>
+            <li><a href="projects/project1/project1.html">Style an Interview</a></li>
+            <li><a href="projects/project2/project2.html">Hyperlinked Artist Tour</a></li>
             <li><a href="project/project3/project3.html">Shared Voices</a></li>
         </ol>
 
