--- a/greg/exercises/ex6/exercise6.html
+++ b/greg/exercises/ex6/exercise6.html
@@ -13,9 +13,9 @@
 
         <h3 class="sub_title">Positioning</h3>
         <ol class="list">
-            <li><a href="">Absolute Positioning</a></li>
-            <li><a href="">Fixed Positioning</a></li>
-            <li><a href="">Floats and Relative Positioning</a></li>
+            <li><a href="absolute.html">Absolute Positioning</a></li>
+            <li><a href="fixed.html">Fixed Positioning</a></li>
+            <li><a href="floats.html">Floats and Relative Positioning</a></li>
         </ol>
 
 
