--- a/greg/projects/project3/project3.html
+++ b/greg/projects/project3/project3.html
@@ -5,13 +5,14 @@
         <title>Shared Voices</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css"/>
+
     </head>
 
 
     <body>
-
-    	<a href="home.html"><img src="img/main/sv.png" id="sv"></a>
+        <a href="home.html"><img src="img/main/sv.png" id="sv"></a> <!-- 열기 -->
+      
 
     </body>
 
