--- a/eunsu/Projects/Project3/sharedvoice.html
+++ b/eunsu/Projects/Project3/sharedvoice.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>- Shared Voice - </title>
+	<title>- Shared Voices - </title>
 	<meta name="author" content="Eunsu Chang" />
 	<meta name="description" content="Fullpage presentation">
 	<meta name="viewport" content="width=device-width">
@@ -198,7 +198,7 @@
     	width: 30%;
     	height: 30%;
     	position: relative;
-    	margin-top: 15%
+    	margin-top: 25%;
 
     }
     .pull-me_2{
@@ -306,10 +306,12 @@
 
 	<div class="section" id="section4">
 		<div class="intro">
-			<div >
-				<img src="images/dieterrams.png"/class="pull-me_1">
+ 
+				<div>
+					<img src="images/dieterrams.png"/class="pull-me_1">
 
-			</div>
+				</div>
+			
 			<div class="panel_1">
 				<br></br>
 				<p> (born 20 May 1932 in Wiesbaden, Hessen) is a German industrial designer closely associated with the consumer products company Braun and the Functionalist school of industrial design. His unobtrusive approach and belief in "less but better" design generated a timelessness nature in his products and have influenced the design of many products, which also secured Rams worldwide recognition and appreciation.</p>
