--- a/mimi/index.html
+++ b/mimi/index.html
@@ -125,8 +125,10 @@
 
         <div class="category">Exercises</div>
         <ol>
+
             <li><a href="exercises/ex4-artschool/artschool-wireframe/sitemap.pdf">Art school website sitemap</a></li>
             <li><a href="exercises/ex2-dair/seven-principles-markup/sevenprinciples.html">Carl Dair Markup</a></li>
+            <li><a href="exercises/ex3-styleddair/seven-principles-markup/sevenprinciples.html">Carl Dair Markup w/ CSS</a></li>
 
             <li><a href="exercises/ex5-6-floats-positioning/css-grid-positioning/chessboard.html">Float: Chessboard</a></li>
             <li><a href="exercises/ex5-6-floats-positioning/css-grid-positioning/tennis-court.html">Float: Tennis court</a></li>
