--- a/mimi/projects/shared-voices/site/home.html
+++ b/mimi/projects/shared-voices/site/home.html
@@ -35,7 +35,7 @@ body {
   background: rgba(255,255,255,1);
   height: auto;
   text-align: center;
-  padding: 5px 0px 5px 0px;
+  padding: 10px 0px 10px 0px;
   color: black;
   position: relative;
   z-index: 20;
@@ -67,6 +67,7 @@ body {
   height: 100%;
   position: relative;
   z-index: 30;
+  overflow-y: visible;
 }
 
 #slides {
@@ -77,11 +78,12 @@ body {
   margin-bottom: -50px;
   position: relative;
   z-index: -100;
+  overflow: visible;
 }
 
 
 .info {
-  width: 30%;
+  width: 31%;
   height: 100%;
   padding: 10px 35% 20px 35%;
   display: none;
@@ -89,12 +91,16 @@ body {
   background: rgba(255,255,255,0.95);
   height: auto;
   position: absolute;
-  border-bottom-right-radius: 200%;
-  border-bottom-left-radius: 200%;
+  /* border-bottom-right-radius: 10% 15%;
+  border-bottom-left-radius: 10% 15%; */
   z-index: 50;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5em;
+}
+
+.blueinfo {
+  color: #204a9e;
 }
 
 
@@ -109,7 +115,7 @@ body {
 .slidetext {
     font-size: 18px;
     margin-left: 100px;
-    margin-top: 22%;
+    margin-top: 20%;
     position: relative;
     z-index: 30;
 }
@@ -120,7 +126,7 @@ body {
     width: 250px;
     margin-bottom: -15px;
     position: relative;
-    z-index: 30
+    z-index: 30;
 }
 
 .slidetextbody {        
@@ -128,7 +134,11 @@ body {
   font-weight: 300;
   font-size: 18px;
   position: relative;
-  z-index: 30
+  z-index: 30;
+  background: rgba(255,255,255,0.4);
+  padding: 15px;
+  margin-left: -15px;
+  border-radius: 10%;
 }
 
 .time {
@@ -137,12 +147,17 @@ body {
   z-index: 30
 }
 
+.profileurl {
+  margin-top: 10px;
+}
+
 .profileurl > a {
   text-decoration: none;
-  line-height: 2em;
+  line-height: 1em;
   font-weight: 500;
   color: #3d3d3d;
   -webkit-transition: all .5s ease;
+  margin-bottom: -10px;
 }
 
 .profileurl > a:hover {
@@ -223,7 +238,7 @@ a:hover.slidesjs-stop {
 
 .slidesjs-pagination {
   margin-top: -7%;
-  margin-left: 43.5%;
+  margin-left: 84%;
   list-style: none;
   position: absolute;
   z-index: 150;
@@ -261,7 +276,7 @@ a:hover.slidesjs-stop {
 
 #slides a:hover,
 #slides a:active {
-  color: #9e2020
+  color: #204a9e
 }
 
 .navbar {
@@ -270,102 +285,98 @@ a:hover.slidesjs-stop {
 
 
 @media screen and (max-width: 750px) {
+  #slideshowarea {
+    overflow-y: hidden;
+    height: 45em;
+  }
+
   .slidetext {
     font-size: 15px;
     margin: 13% auto;
-
+    margin-top: 54%;
+    width: 100%;
+    position: absolute;
+    text-align: justify;
    }
 
    .slidetitle {
-    font-size: 30px;
-    padding: 10px;
-    width: 70%;
-    background: rgba(255,255,255,0.9);
+    font-size: 41px;
+    padding: 10px 0px 0px 0px;
+    width: 100%;
     border-top-right-radius: 10% 40%;
+    text-align: center;
+    margin-top: 10px;
    }
 
    .slidetextbody {
-    height: 100px;
-    width: 70%;
-    overflow: auto;
     position: relative; 
     z-index: 100;
-    background: rgba(255,255,255,0.9);
-    padding: 10px;
-    border-bottom-right-radius: 10% 40%;
+    margin: auto;
+    width: 80%;
+    margin-top: 5px;
    }
 
    .info {
-    width: 50%;
-    padding: 10px 25% 40px 25%;
+    width: 51%;
+    padding: 10px 25% 20px 25%;
     font-size: 15px;       
     font-weight: 400;
     background: white;
-    border-bottom-left-radius: 40%;
-    border-bottom-right-radius: 40%;
   }
 
   a.slidesjs-next {
     left: 8.4%;
+    z-index: 2000;
+    display: none;
   }
 
   a.slidesjs-previous {
     left: 6.2%;
+    z-index: 2000;
+    display: none;
     }
 
   a.slidesjs-play {
     left: 10.6%;
+    z-index: 2000;
+    display: none !important;
+    position: absolute;
   }
 
   a.slidesjs-stop {
     left: 10.6%;
+    z-index: 2000;
+    display:none !important;    
+    position: absolute;
+  }
+
+  .slidesjs-pagination {
+    margin-left: 77%;
+    margin-top: -1.5%;
   }
 }
 
 @media screen and (max-width: 500px) {
+  #header {
+  }
+
   .info {
-    padding: 10px 11% 40px 11%;
-    width: 78%;
-    border-bottom-left-radius: 20%;
-    border-bottom-right-radius: 20%;
+    padding: 10px 10% 20px 10%;
+    width: 81%;
     background: white;
   }
 
-  .slidetext {
-    font-size: 15px;
-    margin: 8% auto;
-   }
-
-   .slidetitle {
-    width: 80%;
-   }
-
-   .slidetextbody {
-    height: 90px;
-    width: 80%;
-    overflow: auto;
-    position: relative; 
-    z-index: 100;
-    background: rgba(255,255,255,0.9);
-    padding: 10px;
-   }
-
-   a.slidesjs-next {
-    left: 13%;
+  .slidetitle {
+    margin-top: 15px;
   }
 
-  a.slidesjs-previous {
-    left: 10%;
-    }
-
-  a.slidesjs-play {
-    left: 16%;
+  .slidesjs-pagination {
+    margin-left: 70%;
+    margin-top: -1.5%;
   }
-
-  a.slidesjs-stop {
-    left: 16%;
-  }
-}</style>
+}
+*/
+</style>
 
 
 
@@ -395,10 +406,7 @@ a:hover.slidesjs-stop {
                   BY DESIGN 
                   </div> <br />
                   <div class="slidetextbody">
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Living organisms have spent millennia evolving to become the most efficient at fulfilling their respective purposes. Now, the simplest living things provide inspiration for the most advanced materials. After ages of learning about nature, the future of design now lies in learning from it as we move toward a more sustainable future. 
                   </div>
               </div>
             </div>
@@ -457,7 +465,8 @@ a:hover.slidesjs-stop {
 
 
 
-  <!-- SlidesJS Required: Link to jQuery -->
+
+ <!-- SlidesJS Required: Link to jQuery -->
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
   <!-- End SlidesJS Required -->
 
@@ -474,7 +483,7 @@ a:hover.slidesjs-stop {
         play: {
           active: true,
           auto: true,
-          interval: 4000,
+          interval: 7000,
           swap: true
         }
       });
@@ -486,9 +495,18 @@ $(document).ready(function() {
         $(".info").slideToggle();
     });
 
-    alert("Best viewed fullscreen");
+    $(".info").hover(function() {
+        $(".info").toggleClass("blueinfo");
+    });
+
 });
+
+
+
   </script>
   <!-- End SlidesJS Required -->
+
+
+ 
 </body>
 </html>
