--- a/eunsu/Exercises/ex-3-dairstyle/seven_principles_style.html
+++ b/eunsu/Exercises/ex-3-dairstyle/seven_principles_style.html
@@ -6,7 +6,36 @@
         <title>Seven Principles of Typographic Contrast</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="seven.css"> 
+        <style>
+            body {
+    font-family: 'Avenir', sans-serif;
+    font-size: 20px;
+    line-height: 20px;
+    padding-top: 80px;
+    padding-left: 120px;
+    padding-right: 130px;
+    padding-bottom: 80px;
+}
+
+h3 {
+    font-family: 'Avenir', sans-serif;
+    color: #330CE8;
+}
+
+#author {
+    opacity: 0.4;
+    text-align: left;
+}
+
+a {
+    text-decoration: none;
+    color: #330CE8;
+}
+
+li:hover {
+    opacity: 0.4;
+}
+        </style>
     </head>
     
     <body>
