--- a/eunsu/index.html
+++ b/eunsu/index.html
@@ -63,7 +63,7 @@
             <li><a href="Exercises/ex-1-filenav/index.html" target="_blank" class="arrow"/>File Path Navigation</a></li>
             <li><a href="Exercises/ex-2-dairmarkup/seven_principles.html" target="_blank" class="arrow"/>Markup Carl Dair</a></li>
             <li><a href="Exercises/ex-3-dairstyle/seven_principles_style.html" target="_blank" class="arrow"/>Style Carl Dair</a></li>
-            <li><a href="Exercises/ex-4-artschool/Mass_Art.pdf" target="_blank" class="arrow"/>Art Center Site Map</a></li>
+            <li><a href="Exercises/ex-4-artschool/Mass_Art.pdf" target="_blank" class="arrow"/>Mass Art Site Map</a></li>
             <li><a href="Exercises/ex-5-floats/index.html" target="_blank" class="arrow"/>CSS Floats</a></li>
             <li><a href="Exercises/ex-6-positioning/index.html" target="_blank" class="arrow"/>CSS Positioning</a></li>
             <li><a href="Exercises/ex-7-artistbio/exercise_artist_bio.html" target="_blank" class="arrow"/>Artist Bio</a></li>
